<?xml version="1.0"?>
<package>
  <name>tobi_package</name>
  <version>0.1.0</version>
  <description>ROS package for the Tobi-P robot</description>

  <maintainer email="julius59@users.noreply.github.com">julius59</maintainer>
  <license>GPLv3</license>
  <url type="website"></url> 
  <author email="julius59@users.noreply.github.com">julius59</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>

</package>
